--- a/.github/workflows/lambda.yml
+++ b/.github/workflows/lambda.yml
@@ -1,14 +1,14 @@
-name: Deploy AWS Lamda 
+name: Deploy AWS Lambda 
 
 on: 
   push:
     branches:
       - main
     paths:
-     - 'lamda/'
+     - 'lambda/'
   
 jobs:
-  lamda:  # name of our job
+  lambda:  # name of our job
     runs-on: ubuntu-latest #specifies the Runner
     steps: 
       - uses: actions/checkout@v2
@@ -21,7 +21,7 @@ jobs:
       - name: Install dependencies #installs any packages
         run: |
          python -m pip install --upgrade pip
-          pip install -r lamda/requirements.txt -t lamda/
+          pip install -r lambda/requirements.txt -t lambda/
 
       - name: Configure AWS Creds  #sets up aws creds 
         uses: aws-actions/configure-aws-credentials@v1
@@ -30,8 +30,8 @@ jobs:
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: us-east-1
 
-      - name: Deploy Lamda Function #Zips lamda directory and updates lamda function
+      - name: Deploy Lambda Function #Zips lamda directory and updates lambda function
         run: |
-          cd lamda
-          zip -r lamda.zip lamda/
-          aws lambda update-function-code --function-name my-test-cicd-lamda --zip-file fileb://lamda.zip
+          cd lambda
+          zip -r lambda.zip lambda/
+          aws lambda update-function-code --function-name my-test-cicd-lamda --zip-file fileb://lambda.zip
