--- a/.github/workflows/lambda.yml
+++ b/.github/workflows/lambda.yml
@@ -1,37 +1,37 @@
-name: Deploy AWS Lambda 
+name: Deploy AWS Lambda
 
-on: 
+on:
   push:
     branches:
       - main
     paths:
-     - 'lambda/'
-  
+      - 'lambda/**'
+
 jobs:
-  lambda:  # name of our job
-    runs-on: ubuntu-latest #specifies the Runner
-    steps: 
+  deploy-lambda:
+    runs-on: ubuntu-latest
+    steps:
       - uses: actions/checkout@v2
 
-      - name: Set up Python #sets up python environment
+      - name: Set up Python
         uses: actions/setup-python@v2
         with:
-         python-version: '3.8'
+          python-version: '3.8'
 
-      - name: Install dependencies #installs any packages
+      - name: Install dependencies
         run: |
-         python -m pip install --upgrade pip
+          python -m pip install --upgrade pip
           pip install -r lambda/requirements.txt -t lambda/
 
-      - name: Configure AWS Creds  #sets up aws creds 
+      - name: Configure AWS Credentials
         uses: aws-actions/configure-aws-credentials@v1
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: us-east-1
 
-      - name: Deploy Lambda Function #Zips lamda directory and updates lambda function
+      - name: Deploy Lambda Function
         run: |
           cd lambda
-          zip -r lambda.zip lambda/
-          aws lambda update-function-code --function-name my-test-cicd-lamda --zip-file fileb://lambda.zip
+          zip -r lambda.zip .
+          aws lambda update-function-code --function-name my-test-cicd-lamba --zip-file fileb://lambda.zip
