--- a/.github/workflows/lambda.yml
+++ b/.github/workflows/lambda.yml
@@ -35,3 +35,8 @@ jobs:
           cd lambda
           zip -r lambda.zip .
           aws lambda update-function-code --function-name my-test-cicd-lambda --zip-file fileb://lambda.zip
+
+      - name: Verify ZIP file
+        run: |
+          cd lambda
+          ls -l lambda.zip
