--- a/Cloudformation/s3-bucket.yaml
+++ b/Cloudformation/s3-bucket.yaml
@@ -19,6 +19,8 @@ Resources:
     Tags:
       - Key: Environment
         Value: !Ref Environment
+      - Key: Environement
+        Value: GithubActionsTesting
 
 Outputs:
   BucketName:
