updates to s3 tags spelling

--- a/Cloudformation/s3-bucket.yaml
+++ b/Cloudformation/s3-bucket.yaml
@@ -19,7 +19,7 @@ Resources:
     Tags:
       - Key: Environment
         Value: !Ref Environment
-      - Key: Environement
+      - Key: Environment
         Value: GithubActionsTesting
 
 Outputs:
