--- a/Cloudformation/s3-bucket.yaml
+++ b/Cloudformation/s3-bucket.yaml
@@ -19,7 +19,7 @@ Resources:
       Tags:
         - Key: Environment
           Value: !Ref Environment
-        - Key: Environment
+        - Key: Project
           Value: GithubActionsTesting
 
 Outputs:
