--- a/.github/workflows/cfn-validate-pr.yml
+++ b/.github/workflows/cfn-validate-pr.yml
@@ -30,7 +30,7 @@ jobs:
       - name: Deploy our stack
         run: |
             stack_name="pr-test-stack-${{github.event.pull_request.number}}"
-            aws cloudformation create-stack --stack-name $stack_name --template-body file://Cloudformation/s3-bucket.yaml --paramters ParameterKey=Environment,ParameterValue=test --capabilities CAPABILITY_NAMED_IAM
+            aws cloudformation create-stack --stack-name $stack_name --template-body file://Cloudformation/s3-bucket.yaml --parameters ParameterKey=Environment,ParameterValue=test --capabilities CAPABILITY_NAMED_IAM
 
       - name: Comment on the PR
         uses: actions/github-script@v6
