changed s3 bucket name

--- a/Cloudformation/s3-bucket.yaml
+++ b/Cloudformation/s3-bucket.yaml
@@ -12,7 +12,7 @@ Parameters:
       - "prod"
 
 Resources:
-  Mys3Bucket:
+  Mys3Bucketcicd:
     Type: AWS::S3::Bucket
     Properties:
       BucketName: !Sub '${AWS::StackName}-${Environment}-bucket'
