changed s3 bucket name

--- a/Cloudformation/s3-bucket.yaml
+++ b/Cloudformation/s3-bucket.yaml
@@ -25,5 +25,5 @@ Resources:
 Outputs:
   BucketName:
     Description: "The name of the S3 bucket"
-    Value: !Ref Mys3Bucket
+    Value: !Ref Mys3Bucketcicd
   
