--- a/Cloudformation/s3-bucket.yaml
+++ b/Cloudformation/s3-bucket.yaml
@@ -15,7 +15,7 @@ Resources:
   Mys3Bucket:
     Type: AWS::S3::Bucket
     Properties:
-      BucketName: !Sub '${AWS::StackName}-${Environment}-bucket'
+      BucketName: !Sub '${AWS::StackName}-${Environment}-bucket22'
       Tags:
         - Key: Environment
           Value: !Ref Environment
